			SWI-Prolog ChangeLog
			====================

  * FIXED: Proper reporting of I/O errors reading/writing streams.

  * FIXED: writeq to handle | as a solo-char and avoid extra space
    between multiple '('.

  * FIXED: code_type(97, to_lower(97)) failed.  Reported by Joachim Katzer.
    Also fixed code_type(L, lower(U)), to non-deterministically generate
    pairs of upper- and lowercase charactercodes.

  * FIXED: crash if a complex goal-argument to a meta-calling predicate
    (call/1, findall/3, etc.) is deterministic upto the last call (so
    this is executed tail-recursively).  This patch also applies to
    executing and removed dynamic predicates.  Thanks to Uwe Lesta.

VERSION 3.3.4
=============

  * LICENSE: Announce GPL'ed status in banner.

  * FIXED: Path problems in RPM-file (actually in path-canonisation).
    Thanks to Michael Rohr.

  * ADDED: pl.lsm (Linux Software Map Entry) to the source distribution

  * INSTALL: Fixed `make install-version'.  Thanks to Joachim Katzer. 

  * PORT: Removed accidental C++-style comment from pl-wam.c.  Thanks to
    Joachim Katzer.

  * INSTALL: rel-ln to avoid using grep -q (GNU-grep specific). Thanks to
    Joachim Katzer. 

  * FIXED: avoid call to win_registry_get_value/3 if this is not defined
    (Unix version).  Otherwise check/0 reports the this predicate as
    undefined.

VERSION 3.3.3
=============

  * WIN32: Added support in the installation for alternative file-extension.
    Added win_registry_get_value/3 to fetch registry values.

  * FIXED: PL_cons_functor_v() to read before writing, so it can overwrite
    one of the input term-references like similar functions.

  * FIXED: Summary description of subset/2.

  * FIXED: Actually look for pl.ini in the Prolog home directory (Windows
    version).

  * FIXED: Bug in PL_unify_term(), causing incorrect `format error' messages.

  * FIXED: MT-version: deadlock in stream-handling.
